--- a/docroot/themes/custom/site/src/styles/theme/components/_modal.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_modal.scss
@@ -69,6 +69,10 @@ $modal-header-angle-height: 70; // Unit less
 
     opacity: 1;
   }
+
+  &.modal-header--no-image {
+    min-height: auto;
+  }
 }
 .modal-title {
   color: #fff;
