--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--vih-class-package-accordion.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--vih-class-package-accordion.html.twig
@@ -6,7 +6,7 @@
     <div class="hidden-xs hidden-sm">
         <ul class="nav nav-tabs nav-justified" role="tablist">
             {% for key, slot in elements['#slots'] %}
-                {% set slot_id = "tabs-class-package--"~term.id~"--slot--"~key~"--"~random_number %}
+                {% set slot_id = "term--"~term.id~"--slot--"~key~"--"~random_number %}
 
                 <li role="presentation">
                     <a href="#{{ slot_id }}" role="tab" data-toggle="tab">{{ slot.name }}</a>
@@ -20,7 +20,7 @@
     <div class="visible-xs visible-sm">
         <ul class="nav nav-pills nav-stacked">
             {% for key, slot in elements['#slots'] %}
-                {% set slot_id = "tabs-class-package--"~term.id~"--slot--"~key~"--"~random_number %}
+                {% set slot_id = "term--"~term.id~"--slot--"~key~"--"~random_number %}
 
                 <li role="presentation">
                     <a href="#{{ slot_id }}" role="tab" data-toggle="tab">{{ slot.name }}</a>
@@ -34,7 +34,7 @@
     <div class="tab-content">
 
         {% for key, slot in elements['#slots'] %}
-            {% set slot_id = "tabs-class-package--"~term.id~"--slot--"~key~"--"~random_number %}
+            {% set slot_id = "term--"~term.id~"--slot--"~key~"--"~random_number %}
 
             <div role="tabpanel" class="tab-pane" id="{{ slot_id }}">
                 {% for class in slot['classes'] %}
