--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--vih-class-package-accordion.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--vih-class-package-accordion.html.twig
@@ -2,11 +2,11 @@
 
 <div>
 
-    <!-- Begin - desktop tabs -->
+    <!-- Begin - tabs -->
     <div class="hidden-xs hidden-sm">
         <ul class="nav nav-tabs nav-justified" role="tablist">
             {% for key, slot in elements['#slots'] %}
-                {% set slot_id = "term--"~term.id~"--slot--"~key~"--"~random_number %}
+                {% set slot_id = "term-"~term.id~"-slot-"~key~"-"~random_number %}
 
                 {% if loop.first %}
                     <li role="presentation" class="active">
@@ -18,31 +18,13 @@
             {% endfor %}
         </ul>
     </div>
-    <!-- End - desktop tabs -->
-
-    <!-- Begin - responsive tabs -->
-    <div class="visible-xs visible-sm">
-        <ul class="nav nav-pills nav-stacked">
-            {% for key, slot in elements['#slots'] %}
-                {% set slot_id = "term--"~term.id~"--slot--"~key~"--"~random_number %}
-
-                {% if loop.first %}
-                    <li role="presentation" class="active">
-                {% else %}
-                    <li role="presentation">
-                {% endif %}
-                    <a href="#{{ slot_id }}" aria-controls="{{ slot_id }}" role="tab" data-toggle="pill">{{ slot.name }}</a>
-                </li>
-            {% endfor %}
-        </ul>
-    </div>
-    <!-- End - responsive tabs -->
+    <!-- End - tabs -->
 
     <!-- Begin - content -->
     <div class="tab-content">
 
         {% for key, slot in elements['#slots'] %}
-            {% set slot_id = "term--"~term.id~"--slot--"~key~"--"~random_number %}
+            {% set slot_id = "term-"~term.id~"-slot-"~key~"-"~random_number %}
 
             <div role="tabpanel" class="tab-pane" id="{{ slot_id }}">
                 {% for class in slot['classes'] %}
