--- a/docroot/themes/custom/site/templates/html.html.twig
+++ b/docroot/themes/custom/site/templates/html.html.twig
@@ -6,7 +6,8 @@
     db_offline ? 'db-offline',
     theme.settings.navbar_position ? 'navbar-is-' ~ theme.settings.navbar_position,
     theme.has_glyphicons ? 'has-glyphicons',
-  ]
+    language ? 'lang-' ~ language|clean_class,
+]
 %}
 <!DOCTYPE html>
 <!--[if lt IE 7 ]><html class="lt-ie10 lt-ie9 lt-ie8 lt-ie7 no-js" {{ html_attributes }}><![endif]-->
