VI-202 Notification email tune

--- a/docroot/themes/custom/site/templates/node/teaser/paragraph--vih-ordered-course-period--email-teaser.html.twig
+++ b/docroot/themes/custom/site/templates/node/teaser/paragraph--vih-ordered-course-period--email-teaser.html.twig
@@ -38,5 +38,7 @@
  * @ingroup themeable
  */
 #}
+<b>{{ content.field_vih_ocp_course_period }}</b>
+<br>
 {{ content.field_vih_ocp_order_course_slots }}
 <br><br>
