--- a/docroot/themes/custom/site/templates/node/teaser/paragraph--vih-ordered-course-person--email-teaser.html.twig
+++ b/docroot/themes/custom/site/templates/node/teaser/paragraph--vih-ordered-course-person--email-teaser.html.twig
@@ -47,5 +47,5 @@
   {{ content.field_vih_ocp_ordered_options }}
 </p>
 <p>
-  {{ content.field_vih_ocp_comment }}
+  {{ paragraph.field_vih_ocp_comment.value }}
 </p>
