VI-224 Event order form. Disable submit button and hide extra submit button if no participants added

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-event-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-event-order-form.html.twig
@@ -69,8 +69,8 @@
 
                     <!-- Begin - form controls -->
                     <div class="partial partial--form-controls">
-                      <div class="partial__body">
-                        {{ form['actions'] }}
+                      <div class="partial__body" id="button">
+                        {{ form['extra_actions'] }}
                       </div>
                     </div>
                     <!-- End - form controls -->
