VI-224 To be consistent in short course order form also disable submit button and hide extra submit button if no participants added.

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-short-course-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-short-course-order-form.html.twig
@@ -70,7 +70,7 @@
                     <!-- Begin - form controls -->
                     <div class="partial partial--form-controls">
                       <div class="partial__body">
-                        {{ form['actions'] }}
+                        {{ form['extra_actions'] }}
                       </div>
                     </div>
                     <!-- End - form controls -->
