--- a/docroot/themes/custom/site/templates/menu/menu--main--site-main-menu-mobile.html.twig
+++ b/docroot/themes/custom/site/templates/menu/menu--main--site-main-menu-mobile.html.twig
@@ -1,63 +1,56 @@
-
+{#
+/**
+ * @file
+ * Default theme implementation to display a menu.
+ *
+ * Available variables:
+ * - menu_name: The machine name of the menu.
+ * - items: A nested list of menu items. Each menu item contains:
+ *   - attributes: HTML attributes for the menu item.
+ *   - below: The menu item child items.
+ *   - title: The menu link title.
+ *   - url: The menu link url, instance of \Drupal\Core\Url
+ *   - localized_options: Menu link localized options.
+ *
+ * @ingroup templates
+ */
+#}
 {% import _self as menus %}
 
-          {#
-            We call a macro which calls itself to render the full tree.
-            @see http://twig.sensiolabs.org/doc/tags/macro.html
-          #}
-          {{ menus.menu_links(items, attributes, 0) }}
+{#
+  We call a macro which calls itself to render the full tree.
+  @see http://twig.sensiolabs.org/doc/tags/macro.html
+#}
 
-          {% macro menu_links(items, attributes, menu_level) %}
-          {% import _self as menus %}
+{{ menus.menu_links(items, attributes, 0, menu_name|clean_class) }}
 
-          {% if items %}
-          {# List #}
-          {% if menu_level == 0 %}
-<ul {{ attributes.addClass('layout-navigation layout-navigation--full-width layout--large-screen-only') }} >
-   {#<div class="logo"><a href="{{ url('<front>') }}"><span>Vejle Idrætshøjskole</span></a></div>#}
-    {% else %}
-    <ul{{ attributes.addClass( 'layout-navigation__dropdown-menu') }}>
+{% macro menu_links(items, attributes, menu_level, menu_name) %}
+  {% import _self as menus %}
+  {% if items %}
+    <ul>
+    {% for item in items %}
+      {% if menu_level == 0 and item.is_expanded %}
+        <li{{ item.attributes.addClass(item_classes) }}>
+
+        {% if item.below %}
+          <a href="#">{{ item.title }}</a>
+        {% else %}
+          <a href="{{ item.url }}">{{ item.title }}</a>
         {% endif %}
+      {% else %}
+        <li{{ item.attributes.addClass(item_classes) }}>
 
-        {% for item in items %}
-            {% set item_classes = [
-            item.in_active_trail ? 'active',
-            ] %}
-
-            {# List item #}
-            {% if item.below and item.is_expanded %}
-            <li{{ item.attributes.addClass('dropdown layout-navigation__dropdown', item_classes) }}>
-            {% else %}
-                <li{{ item.attributes.addClass('layout-navigation__link', item_classes) }}>
-            {% endif %}
-
-            {# Link #}
-            {{ link(item.title, item.url) }}
-
-            {# Submenu #}
             {% if item.below %}
-                {{ menus.menu_links(item.below, attributes.removeClass('layout-navigation layout--large-screen-only').addClass('dropdown-menu'), menu_level + 1) }}
+                <a href="#">{{ item.title }}</a>
+            {% else %}
+                {{ link(item.title, item.url) }}
             {% endif %}
-
-            </li>
-        {% endfor %}
-
-        {# Search icon #}
-        <li class="layout-navigation__link layout-navigation__link__search">
-        <form id="search-form" action="{{ url('view.vih_search.page') }}" method="get" accept-charset="UTF-8">
-            <div class="form-group add-on">
-              <input class="form-control" name="s" placeholder="Search" type="text">
-              <div class="form-group-btn">
-                <button type="submit" name="" class="form-submit btn-search">
-                  <span class="icon icon-search"></span>
-                </button>
-              </div>
-            </div>
-        </form>
-        </li>
-        <li class="layout-navigation__link layout-navigation__link__phone"><a href="tel:004575820811"><span class="icon icon-phone"></span> +45 7582 0811</a></li>
-
+      {% endif %}
+      {% if item.below %}
+        {{ menus.menu_links(item.below, attributes.removeClass('nav'), menu_level + 1, menu_name) }}
+      {% endif %}
+      </li>
+    {% endfor %}
     </ul>
-    {% endif %}
-
-    {% endmacro %}
+  {% endif %}
+{% endmacro %}
