--- a/docroot/themes/custom/site/src/styles/theme/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_page-layout.scss
@@ -54,6 +54,8 @@ html {
 .layout__content {
   padding-top: 0;
   padding-bottom: 0;
+
+  overflow-x: hidden;
 }
 .layout__wrapper {
   overflow-y: visible;
