VI-236 Improving travel classes presentation

--- a/docroot/themes/custom/site/src/styles/theme/entity/node/teaser/_teaser.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/node/teaser/_teaser.scss
@@ -107,6 +107,8 @@ $entity-teaser-inner-left-right-spacing: floor( ( $grid-gutter-width / 2 ) );
     padding: 0;
 
     color: inherit;
+
+    word-break: break-all;
   }
 
   .heading-h1,
