--- a/docroot/themes/custom/site/src/styles/theme/components/_button.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_button.scss
@@ -37,6 +37,8 @@ $button-danger-icon-background: lighten($btn-danger-bg, 14%);
 
   max-width: 100%;
 
+  white-space: normal;
+
   &.btn-primary,
   &.btn-secondary,
   &.btn-info,
