VI-232 adding link for price enquiry

--- a/docroot/themes/custom/site/src/styles/theme/entity/node/full/_long-course.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/node/full/_long-course.scss
@@ -41,6 +41,20 @@
       font-weight: bold;
     }
   }
+
+  &.lang-en {
+    .partial--price-table {
+      // Hiding presentation.
+      display: none;
+    }
+  }
+
+  &.lang-da {
+    .partial--action-button--enquire-prices {
+      // Hiding presentation.
+      display: none;
+    }
+  }
 }
 
 // --------------------------------------------------
