--- a/docroot/themes/custom/site/templates/field/field--node--full--field-vih-cp-course-slots.html.twig
+++ b/docroot/themes/custom/site/templates/field/field--node--full--field-vih-cp-course-slots.html.twig
@@ -38,44 +38,23 @@
  * @see template_preprocess_field()
  */
 #}
-{% set classes = [
+{%
+set classes = [
 'field',
 'field--name-' ~ field_name|clean_class,
 'field--type-' ~ field_type|clean_class,
 'field--label-' ~ label_display,
-] %}
-{% set title_classes = [
+]
+%}
+{%
+set title_classes = [
 'field--label',
 label_display == 'visually_hidden' ? 'sr-only',
-] %}
+]
+%}
 
-{% if label_hidden %}
-    {% if multiple %}
-        <div{{ attributes.addClass(classes, 'field--items') }}>
-            {% for item in items %}
-            <div class="course-period-wrapper">
-                <div{{ item.attributes.addClass('field--item') }}>{{ item.content }}</div>
-                {% endfor %}</div>
-        </div>
-    {% else %}
-        {% for item in items %}
-            <div{{ attributes.addClass(classes, 'field--item') }}>{{ item.content }}</div>
-        {% endfor %}
-    {% endif %}
-{% else %}
-    <div{{ attributes.addClass(classes) }}>
-        <div{{ title_attributes.addClass(title_classes) }}>{{ label }}</div>
-        {% if multiple %}
-        <div class="field__items">
-            <div class="clock-icon"><span class="icon icon-time"></span></div>
-            <div class="course-period-wrapper">
-                {% endif %}
-                {% for item in items %}
-                    <div{{ item.attributes.addClass('field--item') }}>{{ item.content }}</div>
-                {% endfor %}
-                {% if multiple %}
-            </div>
-            {% endif %}
-        </div>
-    </div>
-{% endif %}
+<div class="tab-content">
+  {% for item in items %}
+    {{ item.content }}
+  {% endfor %}
+</div>
